--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html >
+<html lang="en" ng-app="MyFirstApp">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Angular Tutorial Projects</title>
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
 </head>
 <body>
     <h1>Angular Tutorial</h1>
+    <div ng-controller="MyFirstController">
+        <input type="text" ng-model="name">
+        <p>{{returnName()}}</p>
+    </div>
 </body>
 </html>
